--- a/about.html
+++ b/about.html
@@ -58,9 +58,10 @@
                 My goal is to become a skilled full-stack developer, contribute to impactful tech projects,
                 and constantly keep learning new technologies to grow in the software development world.
             </p>
-
         </div>
     </section>
+    <p>Developer: <span id="devName"></span></p>
+    <p>Portfolio Version: <span id="portfolioVersion"></span></p>
 
 </body>
 </html>
